--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,10 @@
-# Prerequisites
-*.d
+Release
+Debug
+/boost/
+/WTL/
+/SDK/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+*.aps
+*.user
+*.ncb
+*.suo
